--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-search-and-filter-app",
+  "homepage": "https://VijayJusgoeaz.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "antd": "^5.11.1",
